--- a/calculator.css
+++ b/calculator.css
@@ -26,8 +26,20 @@ button {
   width: 8%;
   padding-top: 0.5%;
   padding-bottom: 0.5%;
+  font-size: 63%;;
 }
 
+body {
+  background-color: #a6192e;
+  padding: 1%;
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
+h2 {
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: normal;
+}
 .totalCell {
   padding: 0.5%;
   padding-top: 1%;
@@ -39,14 +51,14 @@ button {
 }
 
 #content-wrapper {
-  margin: 0 auto
+  align-self: left;
+  width: 80%;
 }
 
 #content {
   border: 1px solid #D2E1E6;
   border-radius: 2px;
   background-color: #E9EFF1;
-  width: 80%;
   padding-left: 1%;
   padding-right: 1%;
   padding-bottom: 1%;
@@ -57,8 +69,8 @@ button {
   align-self: center;
   background-color: white;
   border-radius: 2px;
+  padding: 1%;
 }
-
 #my-buttons {
   text-align: right;
 }
