--- a/calculator.css
+++ b/calculator.css
@@ -56,8 +56,8 @@ h2 {
 }
 
 #content {
-  border: 1px solid #D2E1E6;
-  border-radius: 2px;
+  border: 0.1% solid #D2E1E6;
+  border-radius: 0.5%;
   background-color: #E9EFF1;
   padding-left: 1%;
   padding-right: 1%;
@@ -68,7 +68,7 @@ h2 {
 #wrapper {
   align-self: center;
   background-color: white;
-  border-radius: 2px;
+  border-radius: 0.5%;
   padding: 2%;
 }
 #my-buttons {
